--- a/runoob-test-2.html
+++ b/runoob-test-2.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="utf-8">
     <title>404notfound</title>
 </head>
-
 <body>
-    <h1>我的第一个HTML页面</h1>
-    <p>我的第一个段落。</p>
+    <h1>my first page</h1>
+    <p>my first paragraph</p>
 </body>
-
 </html>
